# Food-Online-Receipt

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: ci-cd.yaml
scripts/: lint.sh
services/cv/: pyproject.toml
services/frontend/: pyproject.toml
src/: db.py  models.py  streamlit_app.py
src/pages/: chat.py  upload_receipt.py
src/repositories/: receipt.py
src/services/: chat.py  scanner.py
